--- a/war/IT_Projekt.css
+++ b/war/IT_Projekt.css
@@ -9,72 +9,24 @@ h1 {
   text-align: center;
 }
 
-/*layout {
-	margin: 0;
-	width: 1000px;
-	height: 700px;
-	background: #000000;
-}
+/*
 .pure-menu-link {
     display: block;
     text-decoration: none;
     white-space: nowrap;
     color: #777;
 }*/
-
-/*navigation {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-left: 100px;
-	margin-right: 100px;
-	padding-right: 510px;
-	position: absolute;
-	height: 660px;
-	width: 290px;
-	float: left;
-	padding: 10px;
-	font-color: #800000;
-	background-color: #98FB98;
-}
-
-MenuView {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-left: 100px;
-	margin-right: 100px;
-	padding-right: 510px;
-	position: absolute;
-	height: 660px;
-	width: 290px;
-	float: left;*/
-	/*padding: 10px;*/
-/*	font-color: #2E8B57;
-	background-color: #98FB98;
-}
-
-body {
-	margin-top: 20px;
-	margin-down: 20px;
-	margin-left:100px;
-	margin-right: 100px;
-	padding-left: 300px;
-	position: absolute;
-	height: 660px;
-	widht: 500px;
-	background: #E6E6FA;
-} */
-
 	
 div#layout {
 	width: 1000px;
 	height: 700px;
 	background: #E6E6FA;
 	/* margin-top: 250px; */
-	margin-left: 200px;
+	margin-left: 250px;
 }
 
 div#header {
-	margin: 5px;
+	/*margin: 5px;*/
 	width: 1000px;
 	background: #a2a2f9;
 	color: #ffffff;
@@ -83,7 +35,7 @@ div#header {
 div#menu {
 	/*margin-top: 20px;*/
 	margin-bottom: 20px;
-	margin-left: 100px;
+	margin-left: 50px;
 	margin-right: 20px;
 	position: absolute;
 	/* overflow: scroll; */
@@ -98,11 +50,11 @@ div#menu {
 div#main {
 	/*margin-top: 20px; */
 	margin-bottom: 20px;
-	margin-left: 300px;
-	margin-right: 100px;
+	margin-left: 250px;
+	margin-right: 50px;
 	position: absolute;
 	height: 550px;
-	width: 600px;
+	width: 700px;
 	background: #a2a2f9;
 	/* Wie leg ich Abstand zwischen body und Datensätzen an? */
 	}
