--- a/war/IT_Projekt.css
+++ b/war/IT_Projekt.css
@@ -3,22 +3,25 @@
 h1 {
   font-size: 2em;
   font-weight: bold;
-  color: #000000;
+  color: #660033;
   /*margin: 10% 0% 25%;*/
   margin: 40px 0px 70px;
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
-/*
 .pure-menu-link {
     display: block;
     text-decoration: none;
     white-space: nowrap;
-    color: #777;
-}*/
+    color: #660033;
+   /*color: #777;*/
+    font-family: 'Roboto', sans-serif;
+}
 
 .noteArea {
 	background-color: ffffff;
+	color: ffffff;
 	width: 475px;
 }
 
@@ -30,7 +33,8 @@ h1 {
 div#layout {
 	width: 1000px;
 	height: 700px;
-	background: #E6E6FA;
+	background: #FFE5F2;
+	/* background: #E6E6FA; */
 	/* margin-top: 250px; */
 	margin-left: 250px;
 }
@@ -38,15 +42,16 @@ div#layout {
 div#header {
 	/*margin: 5px;*/
 	width: 1000px;
-	background: #a2a2f9;
+	background-image: url('Header.jpg') no-repeat scroll;
+	/*background: #a2a2f9;*/
 	color: #ffffff;
 }
 
 div#menu {
 	/*margin-top: 20px;*/
-	margin-bottom: 20px;
-	margin-left: 50px;
-	margin-right: 20px;
+	margin-bottom: 150px;
+	margin-left: 40px;
+	/*margin-right: 20px;*/
 	position: absolute;
 	/* overflow: scroll; */
 	height: 225px;
@@ -55,18 +60,20 @@ div#menu {
 	padding: 10px;
 	font-color: #2E8B57;
 	background-color: #ffffff;
+	font-size: 16px;
 }
 
 div#main {
 	/*margin-top: 20px; */
-	margin-bottom: 20px;
+	margin-bottom: 150px;
 	margin-left: 250px;
-	margin-right: 50px;
+	margin-right: 30px;
+	padding: 10px;
 	position: absolute;
-	height: 550px;
-	width: 700px;
-	background: #a2a2f9;
-	/* Wie leg ich Abstand zwischen body und Datensätzen an? */
+	height: 540px;
+	width: 720px;
+	background: #FFFFFF;
+	/* background: #a2a2f9 oder #FFE5F2; */
 	}
 .testName{
 	backround: #FFFFFF; 
