--- a/war/WEB-INF/Report.css
+++ b/war/WEB-INF/Report.css
@@ -186,11 +186,21 @@ div#menu {
 	margin-left: 33px;
 	position: absolute;
 	/* overflow: scroll; */
-	/* height: 300px;
-	height: 325px;*/
-	height: 350px;
+	/* height: 300px;*/
+	height: 325px;
 	width: 187px;
 	/*padding: 10px;*/
+	float: left;
+	font-color: #2E8B57;
+	background-color: #ffffff;
+	font-size: 17px;
+}
+
+div#menu2 {
+	margin-left: 33px;
+	position: absolute;
+	height: 325px;
+	width: 187px;
 	float: left;
 	font-color: #2E8B57;
 	background-color: #ffffff;
