--- a/war/IT_Projekt.css
+++ b/war/IT_Projekt.css
@@ -22,26 +22,33 @@ h1 {
 }
 
 .pure-menu-link {
+	
     display: block;
     text-decoration: none;
     white-space: nowrap;
     color: #660033;
-   /*color: #777;*/
     font-family: 'Roboto', sans-serif;
-    
-    padding: .5em 1em;
-    /*margin-left: 10px;*/
+   
 }
 .pure-menu-link:after {
-	padding-left: 0.5em;
-    /* content: "\25B8";
-    content: "\25BE";*/
     font-size: small;
 }
-/* .pure-menu-link:hover {
-	background-color: transparent;
-	
-}*/
+
+.dockpanel {
+	border-style: solid;
+	border-with: 5px;
+	border-color: blue;
+	border-collapse: collapse;
+}
+
+.panelheader {
+	background-color: #e1d1d6;
+	border-style: solid;
+	border-width: 2px;
+	border-color: black;
+}
+
+
 .pure-menu-link:visited {
 	color: #777777;
 }
