--- a/war/IT_Projekt.css
+++ b/war/IT_Projekt.css
@@ -153,7 +153,7 @@ h1 {
     padding: 0.5em 1em;
     color: #444; /* rgba not supported (IE 8) */
     color: rgba(0, 0, 0, 0.80); /* rgba supported */
-    border: 1px solid #999;  /*IE 6/7/8*/
+    /*IE 6/7/8*/
     border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
     background-color: #E6E6E6;
     text-decoration: none;
@@ -239,4 +239,36 @@ div#main {
 	
 .testName{
 	backround: #FFFFFF; 
+}
+
+.dockpanel {
+
+}
+
+.googleTable {
+
+}
+
+.pure-button {
+
+}
+
+.pure-button {
+
+}
+
+.pure-button {
+
+}
+
+.pure-button {
+
+}
+
+.pure-button {
+
+}
+
+.pure-button {
+
 }
