--- a/war/IT_Projekt.css
+++ b/war/IT_Projekt.css
@@ -18,6 +18,10 @@ h1 {
   font-family: 'Roboto', sans-serif;
 }
 
+.panelspacing {
+	padding-bottom: 2%;
+}
+
 .loadingpanel {
 	
 	background-color: #ffffff;
